# RPG

./: CMakeLists.txt  README.md
scripts/: errors.h  game.cpp  game.h  gamePerson.cpp  gamePerson.h  inputController.cpp  inputController.h  inputManager.cpp  inputManager.h  item.cpp  item.h  main.cpp  player.cpp  player.h  quest.cpp  quest.h  resourceManager.cpp  resourceManager.h  types.h  uiManager.cpp  uiManager.h  utils.h  visualizer.cpp  visualizer.h
